--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1> Hello from me<h1>
+<!DOCTYPE html>
+<html>
+  
+<body>
+
+
+<script>
+  setTimeout(function(){ location.replace("/wishes/index.html"); }, 3000);
+  
+</script>
+
+</body>
+</html>
