--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 <script>
-  setTimeout(function(){ location.replace("/wishes/index.html"); }, 3000);
+  setTimeout(function(){ location.replace("wishes/index.html"); }, 3000);
   
 </script>
 
