--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script>
+	
+	function getUrlVars() {
+var vars = {};
+var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+vars[key] = value;
+});
+return vars;
+}
+var first = getUrlVars()["image"];
+if(first==1)
+{
+	document.getElementById("myImg").src = "images/images (3).jpg";
+}
+	</script>
+  </head>
   
 <body>
 
