--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-	
-	function getUrlVars() {
-var vars = {};
-var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
-vars[key] = value;
-});
-return vars;
-}
-var first = getUrlVars()["image"];
-if(first==1)
-{
-	document.getElementById("myImg").src = "images/images (3).jpg";
-}
-	</script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5664070871888863",
+    enable_page_level_ads: true
+  });
+</script>
   </head>
   
 <body>
