--- a/wishes/index.html
+++ b/wishes/index.html
@@ -105,7 +105,7 @@ p#error-display {
 
   </head>
   <body style="background-color: #34495e; margin-top: 5%; " onload="create3();">
-  <form method="GET" action="new.html">
+  <form method="GET" action="wish.html">
     
   
     <div class="container">
