--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     enable_page_level_ads: true
   });
 </script>
+    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c1f13bbc276020011d38151&product=social-ab' async='async'></script>
   </head>
   
 <body>
