--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -463,7 +463,7 @@ document.getElementById("animated-example2").innerHTML = "Happy New Year";
     document.getElementById("hello").href = "whatsapp://send?text= see th link "+window.location.href;
     document.getElementById("hello2").href = "http://www.facebook.com/sharer/sharer.php?u=https://wishes.serveblog.net/wishes/wishes.html"+add;
   </script>
-  <script>
+  <!--script>
   $(document).ready(function() {
      $('#hello').on("click", function(e) {
         if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
@@ -477,7 +477,7 @@ document.getElementById("animated-example2").innerHTML = "Happy New Year";
         }
      });
   });
-</script>
+</script-->
   <div id='bizzbar'>
     <p class='bizztext'>Create your Own Wish Like This.
       <a href="/wishes/index.html" target="_blank">
