--- a/wishes/index.html
+++ b/wishes/index.html
@@ -235,43 +235,48 @@ p#error-display {
 
       <div class="item">
         <pre>
-     Bless us, oh Lord, this Christmas, 
-     with a giving spirit, quietness of mind 
-     and serenity in our hearts, 
-     and may all beings be blessed with the same gifts.
+     The gift of love,
+the gift of peace
+The gift of happiness...
+May all these be yours at
+Christmas.
+Merry Christmas...!
+
 
        </pre>
       </div>
     
       <div class="item">
         <pre>
-     A silent night, a star above, 
-     a blessed gift of hope and love.
-      A blessed Christmas to you!
+    May the Christmas season fill your home with joy,
+      your heart with love and your life with laughter.
+      Wishing you a very Merry Christmas
+       and we look forward to seeing you in 2019.
+
 
        </pre>
       </div>
       <div class="item">
         <pre>
-     TMay the Christmas season fill your home with joy,
-      your heart with love and your life with laughter.
-       Wishing you a very Merry Christmas 
-       and we look forward to seeing you in 2019.
+   Warmest thoughts and best wishes for a wonderful Christmas 
+     and a Happy New Year. 
+     May peace, love, and prosperity follow you always.
        </pre>
       </div>
       <div class="item">
         <pre>
-     Warmest thoughts and best wishes for a wonderful Christmas
-      and a Happy New Year. 
-      May peace, love, 
-      and prosperity follow you always.
-       </pre>
-      </div>
-      <div class="item">
-        <pre>
-     Best wishes for the Holidays,
+       Best wishes for the Holidays,
       and for health and happiness throughout
        the coming year.
+
+       </pre>
+      </div>
+      <div class="item">
+        <pre>
+    Bless us, oh Lord, this Christmas, with a giving spirit,
+     quietness of mind and serenity in our hearts,
+      and may all beings be blessed with the same gifts.
+
 
        </pre>
       </div>
