--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -202,7 +202,7 @@ if(getUrlVars()["message"] != "")
   }
   else if(second == 3)
   {
-    document.getElementById("message").innerHTML = "TMay the Christmas season fill your home with joy, your heart with love and your life with laughter. Wishing you a very Merry Christmas and we look forward to seeing you in 2019.";
+    document.getElementById("message").innerHTML = "May the Christmas season fill your home with joy, your heart with love and your life with laughter. Wishing you a very Merry Christmas and we look forward to seeing you in 2019.";
   }
   else if(second == 4)
   {
