--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -316,16 +316,16 @@ document.getElementById("myInput").value = window.location.href;
 
   </script>
 
-  <!--div class="float-share">
+  <div class="float-share">
     <div class="share-nav" >
       
       <center>
 </center>
 
-    </div-->
+    </div>
     <!--div class="sharethis-inline-share-buttons"></div-->
 
-    <!--div class="shared">
+    <div class="shared">
               <a id="hello" href=""
         data-action="share/whatsapp/share"> 
                     <img width="30px" height="30px" src="https://statusguy.com/images/whatsapp_icon.svg"
@@ -566,7 +566,7 @@ document.getElementById("myInput").value = window.location.href;
   </style>
   <script>
     var add="?username="+name+"&amp;wishes="+wish+"&amp;image="+first+"&amp;message="+second;
-    document.getElementById("hello").href = "whatsapp://send?text= see th link "+window.location.href;
+    document.getElementById("hello").href = "whatsapp://send?text= "+window.location.href + "see the link";
     document.getElementById("hello2").href = "http://www.facebook.com/sharer/sharer.php?u=https://wishes.serveblog.net/wishes/wishes.html"+add;
   </script>
   <!--script>
