--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -342,7 +342,7 @@ document.getElementById("myInput").value = window.location.href;
 
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://statusguy.com/js/hope.js"></script-->
+  <script src="https://statusguy.com/js/hope.js"></script>
   <!--script>
     jQuery(document).ready(function(e) {
       jQuery('body').wpSuperSnow({
