--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -1,4 +1,4 @@
-
+ea
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -228,7 +228,7 @@ if(getUrlVars()["message"] != "")
 }
 if(wish == "new")
 {
-document.getElementById("animated-example2").innerHTML = "Merry Christmas";
+document.getElementById("animated-example2").innerHTML = "Happy new Year";
   if(getUrlVars()["image"] != "")
   {
   if(first==1)
@@ -429,167 +429,4 @@ document.getElementById("myInput").value = window.location.href;
       height: 19px;
       bottom: 6px;
       right: 20px;
-      background: url(http://hb-assets.s3.amazonaws.com/system/modules/hellobar/lib/sprite-8bit.png) no-repeat 0px -247px;
-      position: absolute
-    }
-    close:hover {
-      background: url(http://hb-assets.s3.amazonaws.com/system/modules/hellobar/lib/sprite-8bit.png) no-repeat 0px -228px;
-      cursor: pointer;
-      height: 19px
-    }
-    open {
-      -webkit-box-shadow: rgba(0, 0, 0, 0.34902) 0px 0px 5px;
-      background-image: url(http://hb-assets.s3.amazonaws.com/system/modules/hellobar/lib/sprite-8bit.png);
-      background-position: 0px -8px;
-      background-repeat: no-repeat no-repeat;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-      border: 3px solid rgb(255, 255, 255);
-      box-shadow: rgba(0, 0, 0, 0.34902) 0px 0px 5px;
-      display: block;
-      height: 0px;
-      outline: none;
-      overflow: hidden;
-      padding: 80px 0px 0px;
-      position: absolute;
-      right: 10px;
-      top: -50px;
-      width: 35px;
-      z-index: 100;
-      background-color: #eb593c;
-      display: none
-    }
-    open:hover {
-      background-color: #ff5a3d;
-      cursor: pointer
-    }
-    p.bizztext {
-      margin-top: -2px;
-    }
-    .giftbox {
-      vertical-align: bottom;
-    }
-    .bottomadd {
-      margin-top: 5px;
-    }
-    .figures {
-      position: relative;
-      z-index: 2;
-      text-align: center;
-      padding-bottom: 13px;
-    }
-    .figures ul li {
-      display: inline-block;
-      margin-right: -13px;
-      animation-name: dance;
-      animation-duration: 2s;
-      animation-iteration-count: infinite;
-      -webkit-transition-timing-function: cubic-bezier(0.600, 0, 0.735, 0.045);
-      -webkit-transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045);
-      -moz-transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045);
-      -o-transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045);
-      transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045);
-    }
-    .figures ul li:first-child {
-      margin-right: -22px;
-      z-index: 2;
-      position: relative;
-    }
-    .figures ul li:nth-child(2) {
-      position: relative;
-      z-index: 1;
-    }
-    .figures ul li img {
-      width: 100px;
-    }
-    .figures ul li:first-child img {
-      width: 300px;
-    }
-    @keyframes dance {
-      0% {
-        -webkit-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-      }
-      16.66%,
-      49.98% {
-        -webkit-transform: rotate(-10deg);
-        -ms-transform: rotate(-10deg);
-        transform: rotate(-10deg);
-      }
-      32.32% {
-        -webkit-transform: rotate(-5deg);
-        -ms-transform: rotate(-5deg);
-        transform: rotate(-5deg);
-      }
-      66.64%,
-      100% {
-        -webkit-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-      }
-      83.8% {
-        -webkit-transform: rotate(5deg);
-        -ms-transform: rotate(5deg);
-        transform: rotate(5deg);
-      }
-    }
-    @keyframes dance {
-      0% {
-        -webkit-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-      }
-      16.66%,
-      49.98% {
-        -webkit-transform: rotate(-10deg);
-        -ms-transform: rotate(-10deg);
-        transform: rotate(-10deg);
-      }
-      32.32% {
-        -webkit-transform: rotate(-5deg);
-        -ms-transform: rotate(-5deg);
-        transform: rotate(-5deg);
-      }
-      66.64%,
-      100% {
-        -webkit-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-      }
-      83.8% {
-        -webkit-transform: rotate(5deg);
-        -ms-transform: rotate(5deg);
-        transform: rotate(5deg);
-      }
-    }
-  </style>
-  <script>
-    var add="?username="+name+"&amp;wishes="+wish+"&amp;image="+first+"&amp;message="+second;
-    document.getElementById("hello").href = "whatsapp://send?text="+window.location.href + "  see the link";
-    document.getElementById("hello2").href = "http://www.facebook.com/sharer/sharer.php?u=https://wishes.serveblog.net/wishes/wishes.html"+add;
-  </script>
-  <!--script>
-  $(document).ready(function() {
-     $('#hello').on("click", function(e) {
-        if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-            var article = $(this).attr("data-text");
-            var weburl = $(this).attr("data-link");
-            var whats_app_message = encodeURIComponent(document.URL);
-            var whatsapp_url = "whatsapp://send?text="+whats_app_message;
-            window.location.href= whatsapp_url;
-        }else{
-             alert('You Are Not On A Mobile Device. Please Use This Button To Share On Mobile');
-        }
-     });
-  });
-</script-->
-  <div id='bizzbar'>
-    <p class='bizztext'>Create your Own Wish Like This.
-      <a href="/wishes/index.html" target="_blank">
-        <button class='bizzbutton'>Click me</button>
-      </a>
-    </p>
-  </div>
-</body>  
-</html>
+      background: url(http://hb-
