--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -13,7 +13,7 @@ ea
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     
-   </style>
+   <style>
    .container
    {
     margin-top:50 px;
