--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -228,7 +228,7 @@ if(getUrlVars()["message"] != "")
 }
 if(wish == "new")
 {
-document.getElementById("animated-example2").innerHTML = "Merry Christmas";
+document.getElementById("animated-example2").innerHTML = "Happy New Year";
   if(getUrlVars()["image"] != "")
   {
   if(first==1)
