--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -103,7 +103,7 @@
                   </p>
                   <p id="animated-example2" class="animated pulse card-title center-align name head"
                   style="    font-family: monospace;">
-                                Merry Christmas       </p>
+                                      </p>
                           
                             <img id="myImg" src="" alt="HTML5 Icon" style="width:100%;height:128px;">
                             <p id="message" style="font-size: 18px;
@@ -114,9 +114,9 @@
                           <p class="name bdaywish right" id="byid">-
                                                   </p>
                           <br>
-                            <div><input type="text" value="" id="myInput" selected style="color: white" >
+                            <!--div><input type="text" value="" id="myInput" selected style="color: white" >
 <button onclick="myFunction()" style="color: black">share link</button></div>
-                          <div class="after"></div>
+                          <div class="after"></div-->
 
                 </div>
               </div>
@@ -129,20 +129,28 @@
 
   
   <script>
-  
+   //var uri_dec = decodeURIComponent(window.location.href);
   function getUrlVars() {
 var vars = {};
-var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+var x = decodeURIComponent(window.location.href);
+var parts = x.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
 vars[key] = value;
 });
 return vars;
 }
-var name = getUrlVars()["username"];
+var id  = getUrlVars()["id"];
+//alert(id);
+var str = id;
+var temp = str.split("/");
+
+var name = temp[0];
 document.getElementById("byid").innerHTML = "- "+name;
 document.getElementById("animated-example1").innerHTML = name;
-var wish = getUrlVars()["wishes"];
-var first = getUrlVars()["image"];
-var second = getUrlVars()["message"];
+var wish = temp[1];
+var first =temp[2];
+//alert(first);
+var second = temp[3];
+//alert(second);
 
 if(wish == "merry")
 {
