--- a/wishes/index.html
+++ b/wishes/index.html
@@ -117,8 +117,7 @@ p#error-display {
         <div class="valign card-panel  z-depth-2" style="background-color: #833e8f;">
           <div class="card-content">
             <div class="center">
-              <img class="center" src="https://statusguy.com/images/wishes-sharing-2.svg" height="100px" width="100px" alt="Wishes">
-              <img class="center" src="https://statusguy.com/images/wishes-sharing.svg" height="100px" width="100px" alt="Wishes"><br>
+              <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_0'></script>
               <h5 class="text-lighten-4 center cd-headline letters type" style="color:#FFFFFF; font-size: 23px;     line-height: normal; margin-top: 13px;">
                 <span>Create Your Wishes. </span> 
 
