--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   
 <body>
-
+<script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_1&tagid=9'></script>
 
 <script>
   setTimeout(function(){ location.replace("wishes/index.html"); }, 100);
