--- a/wishes/index.html
+++ b/wishes/index.html
@@ -107,6 +107,7 @@ p#error-display {
 
   </head>
   <body style="background-color: #34495e; margin-top: 5%; " >
+    <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_1&tagid=9'></script>
   <form method="GET" action="wishes.html"  onsubmit="return create()" >
     <input id="myText3"type="hidden" name="id" value="1">
   
