--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -76,6 +76,7 @@
   <main>
     <div class="">
       <div class="container">
+        <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_0'></script>
         <div class="col s12">
           <div class="row">
 
