--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -331,6 +331,7 @@ document.getElementById("myInput").value = window.location.href;
     <div class="share-nav" >
       
       <center>
+        <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
 </center>
 
     </div>
