--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -328,11 +328,11 @@ document.getElementById("myInput").value = window.location.href;
   </script>
 
   <div class="float-share">
-    <div class="share-nav" >
+    <div class="share-nav" style="width: 100%">
       
-      <center>
+      
         <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
-</center>
+
 
     </div>
     <!--div class="sharethis-inline-share-buttons"></div-->
