--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -88,6 +88,7 @@
                 <div class="card-content white-text pyro">
                   <div class="before"></div>
                 <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_0'></script>
+                  <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_2'></script>
                   <p id="animated-example1" class="animated pulse card-title center-align name head"
                   style="    font-family: monospace;">
                                 roshan      </p>
