--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -22,7 +22,7 @@
    </style>
   
 
-  <!--div id="fb-root"></div>
+  <div id="fb-root"></div>
   <script>
     (function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -33,7 +33,7 @@
         "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-  </script-->
+  </script>
 
   <!-- Facebook Pixel Code -->
   <!--script>
@@ -148,6 +148,12 @@ var str = id;
 var temp = str.split("/");
 
 var name = temp[0];
+var name2 = name.split("+");
+    var name3;
+    for(int i=0 ; i < name2.length ; i++)
+    {
+      name3 += name2[i]+" ";
+    }
 document.getElementById("byid").innerHTML = "- "+name;
 document.getElementById("animated-example1").innerHTML = name;
 var wish = temp[1];
