--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -150,12 +150,13 @@ var temp = str.split("/");
 var name = temp[0];
 var name2 = name.split("+");
     var name3;
-    for(int i=0 ; i < name2.length ; i++)
+    var i;
+    for(i=0 ; i < name2.length ; i++)
     {
       name3 += name2[i]+" ";
     }
-document.getElementById("byid").innerHTML = "- "+name;
-document.getElementById("animated-example1").innerHTML = name;
+document.getElementById("byid").innerHTML = "- "+name3;
+document.getElementById("animated-example1").innerHTML = name3;
 var wish = temp[1];
 var first =temp[2];
 //alert(first);
