--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -153,7 +153,7 @@ var name2 = name.split("+");
     var i;
     for(i=0 ; i < name2.length ; i++)
     {
-      name3 += name2[i]+" ";
+      name3 += name2[i]+"&nbsp";
     }
 document.getElementById("byid").innerHTML = "- "+name3;
 document.getElementById("animated-example1").innerHTML = name3;
