--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -149,6 +149,7 @@ var temp = str.split("/");
 
 var name = temp[0];
 var name2 = name.split("+");
+    alert (name2);
     var name3;
     var i;
     for(i=0 ; i < name2.length ; i++)
