--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -149,7 +149,7 @@ var temp = str.split("/");
 
 var name = temp[0];
 var name2 = name.split("+");
-    alert (name2);
+   // alert (name2);
     var name3;
     var i;
     for(i=0 ; i < name2.length ; i++)
@@ -157,6 +157,7 @@ var name2 = name.split("+");
       if(i==0)
       {
         name3 = name2[i];
+        alert(name3);
       }
       else{
       
