--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -156,7 +156,7 @@ var name2 = name.split("+");
     {
       if(i==0)
       {
-        name3 = name2[i];
+        name3 = name2[i]+"&nbsp";
         alert(name3);
       }
       else{
