--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -157,7 +157,7 @@ var name2 = name.split("+");
       if(i==0)
       {
         name3 = name2[i]+"&nbsp";
-        alert(name3);
+        //alert(name3);
       }
       else{
       
