--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -36,7 +36,7 @@
   </script>
 
   <!-- Facebook Pixel Code -->
-  <script>
+  <!--script>
     ! function(f, b, e, v, n, t, s) {
       if (f.fbq) return;
       n = f.fbq = function() {
@@ -64,9 +64,9 @@
   </noscript>
   <!-- DO NOT MODIFY -->
   <!-- End Facebook Pixel Code -->
-  <script>
+  <!--script>
     fbq('track', 'ViewContent');
-  </script>
+  </script-->
 
   
   
