--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -12,7 +12,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    
+    <meta property="og:url"           content="https://www.wishes.serveblog.net/wishes/index.html" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="greeting" />
+  <meta property="og:description"   content="Giving happiness" />
+  
    <style>
    .container
    {
