--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -600,7 +600,7 @@ document.getElementById("myInput").value = window.location.href;
     }
   </style>
   <script>
-    var add="?id"=id+"&username="+name+"&amp;wishes="+wish+"&amp;image="+first+"&amp;message="+second;
+    var add="?id"+id+"&username="+name+"&amp;wishes="+wish+"&amp;image="+first+"&amp;message="+second;
     document.getElementById("hello").href = "whatsapp://send?text= see th link "+window.location.href;
     document.getElementById("hello2").data-href = "http://www.facebook.com/sharer/sharer.php?u=https://wishes.serveblog.net/wishes/wishes.html"+add;
   </script>
