--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -12,10 +12,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    <meta property="og:url"           content="https://www.wishes.serveblog.net/wishes/index.html" />
-  <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="greeting" />
-  <meta property="og:description"   content="Giving happiness" />
+    
   
    <style>
    .container
@@ -26,51 +23,7 @@
    </style>
   
 
-  <div id="fb-root"></div>
-  <script>
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s);
-      js.id = id;
-      js.src =
-        "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
-
-  <!-- Facebook Pixel Code -->
-  <!--script>
-    ! function(f, b, e, v, n, t, s) {
-      if (f.fbq) return;
-      n = f.fbq = function() {
-        n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
-      if (!f._fbq) f._fbq = n;
-      n.push = n;
-      n.loaded = !0;
-      n.version = '2.0';
-      n.queue = [];
-      t = b.createElement(e);
-      t.async = !0;
-      t.src = v;
-      s = b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t, s)
-    }(window,
-      document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '484222478584974'); // Insert your pixel ID here.
-    fbq('track', 'PageView');
-  </script>
-  <noscript>
-      <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=484222478584974&ev=PageView&noscript=1"/>
-  </noscript-->
-  <!-- DO NOT MODIFY -->
-  <!-- End Facebook Pixel Code -->
-  <!--script>
-    fbq('track', 'ViewContent');
-  </script-->
+  
 
   
   
@@ -366,12 +319,7 @@ document.getElementById("myInput").value = window.location.href;
         </a>
     </div>
     <div class="shared">
-      <div class="fb-share-button" 
-    data-href="https://www.your-domain.com/your-page.html" 
-    data-layout="button_count">
-  </div>
-<!--img width="30px" height="30px" src="https://statusguy.com/images/fb_icon.svg"/> Share
-</a-->
+<script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
     </div>
   </div>
 
