--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -313,7 +313,7 @@ if(getUrlVars()["message"] != "")
         </a>
     </div>
     <div class="shared">
-<script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
+<!--script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script-->
     </div>
   </div>
 
