--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -296,11 +296,10 @@ if(getUrlVars()["message"] != "")
   </script>
 
   <div class="float-share">
-    <div class="share-nav" style="width: 100%">
+    <div class="share-nav" >
       
-      
-        <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
-
+      <center>
+</center>
 
     </div>
     <!--div class="sharethis-inline-share-buttons"></div-->
@@ -312,9 +311,12 @@ if(getUrlVars()["message"] != "")
           /> Share
         </a>
     </div>
-    <div class="shared">
-<!--script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script-->
-    </div>
+    <!--div class="shared">
+      <a id="hello2" href="http://www.facebook.com/sharer/sharer.php?u=https://statusguy.com/gm/roshan"
+      target="_blank">
+<img width="30px" height="30px" src="https://statusguy.com/images/fb_icon.svg"/> Share
+</a>
+    </div-->
   </div>
 
   
