--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -311,12 +311,12 @@ if(getUrlVars()["message"] != "")
           /> Share
         </a>
     </div>
-    <!--div class="shared">
+    <div class="shared">
       <a id="hello2" href="http://www.facebook.com/sharer/sharer.php?u=https://statusguy.com/gm/roshan"
       target="_blank">
 <img width="30px" height="30px" src="https://statusguy.com/images/fb_icon.svg"/> Share
 </a>
-    </div-->
+    </div>
   </div>
 
   
