--- a/wishes/wishes.html
+++ b/wishes/wishes.html
@@ -297,10 +297,7 @@ if(getUrlVars()["message"] != "")
 
   <div class="float-share">
     <div class="share-nav" >
-      
-      <center>
-</center>
-
+   <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
     </div>
     <!--div class="sharethis-inline-share-buttons"></div-->
 
@@ -312,10 +309,7 @@ if(getUrlVars()["message"] != "")
         </a>
     </div>
     <div class="shared">
-      <a id="hello2" href="http://www.facebook.com/sharer/sharer.php?u=https://statusguy.com/gm/roshan"
-      target="_blank">
-<img width="30px" height="30px" src="https://statusguy.com/images/fb_icon.svg"/> Share
-</a>
+      <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_3&size=7'></script>
     </div>
   </div>
 
