--- a/wishes/index.html
+++ b/wishes/index.html
@@ -117,7 +117,7 @@ p#error-display {
           <div class="card-content">
             <div class="center">
               <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_2'></script>
-              <script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_0'></script>
+              <!--script data-cfasync='false' type='text/javascript' src='//p188101.clksite.com/adServe/banners?tid=188101_644834_0'></script-->
               <h5 class="text-lighten-4 center cd-headline letters type" style="color:#FFFFFF; font-size: 23px;     line-height: normal; margin-top: 13px;">
                 <span>Create Your Wishes. </span> 
 
